Add avatar upload logic